--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,41 @@
     "tasks": [
         {
             "type": "shell",
-            "label": "C/C++: gcc build active file",
+            "label": "C/C++: gcc build rip",
             "command": "/usr/bin/make",
+            "args": ["rip"],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "type": "shell",
+            "label": "C/C++: gcc build ripscript",
+            "command": "/usr/bin/make",
+            "args": ["ripscript"],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "type": "shell",
+            "label": "C/C++: gcc clean",
+            "command": "/usr/bin/make",
+            "args": ["clean"],
             "options": {
                 "cwd": "${workspaceFolder}"
             },
